--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
-os: osx
-osx_image: xcode7.3
+matrix:
+  include:
+    - os: linux
+    - os: osx
+      osx_image: xcode7.1
+    - os: osx
+      osx_image: xcode7.3
 sudo: false
 node_js:
   - "6"
