--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,15 @@ matrix:
   include:
     - os: linux
       sudo: false
-      node_js: stable
-    - os: osx
-      osx_image: xcode7.1
-      sudo: false
-      node_js: stable
+      node_js: 6
     - os: osx
       osx_image: xcode7.3
       sudo: false
-      node_js: stable
+      node_js: 6
+    - os: osx
+      osx_image: xcode7.1
+      sudo: false
+      node_js: 4
 before_install:
   - uname -a
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sw_vers; fi
