--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ matrix:
       sudo: false
       node_js: 4
 before_install:
+  - nvm ls
   - uname -a
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sw_vers; fi
