--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,14 @@ matrix:
       osx_image: xcode7.3
       sudo: false
       node_js: 6
+      before_install:
+        - nvm use 6
     - os: osx
       osx_image: xcode7.1
       sudo: false
       node_js: 4
+      before_install:
+        - nvm use 4
 before_install:
   - nvm ls
   - uname -a
