--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ matrix:
       sudo: false
       node_js: 6
       before_install:
-        - nvm use 6
+        - nvm use --delete-prefix 6
     - os: osx
       osx_image: xcode7.1
       sudo: false
       node_js: 4
       before_install:
-        - nvm use 4
+        - nvm use --delete-prefix 4
 before_install:
   - nvm ls
   - uname -a
