--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,11 @@
 language: node_js
-matrix:
-  include:
-    - os: linux
-      sudo: false
-      node_js: 6
-    - os: osx
-      osx_image: xcode7.3
-      sudo: false
-      node_js: 6
-      before_install:
-        - nvm use --delete-prefix 6
-    - os: osx
-      osx_image: xcode7.1
-      sudo: false
-      node_js: 4
-      before_install:
-        - nvm use --delete-prefix 4
+os: osx
+osx_image: xcode7.3
+node_js:
+  - 6
+  - 4
 before_install:
+#  - nvm use --delete-prefix 6
   - nvm ls
   - uname -a
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sw_vers; fi
