--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: node_js
 os: osx
 osx_image: xcode7.3
-env:
-  - NODE_VERSION="6"
-  - NODE_VERSION="4"
-# node_js:
-#   - 6
-#   - 4
+# env:
+#   - NODE_VERSION="6"
+#   - NODE_VERSION="4"
+node_js:
+  - 6
+  - 4
 before_install:
-  - nvm install $NODE_VERSION
-  - nvm use --delete-prefix $NODE_VERSION
+  # - nvm install $NODE_VERSION
+  # - nvm use --delete-prefix $NODE_VERSION
+  - echo $TRAVIS_NODE_VERSION
   - nvm ls
   - uname -a
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sw_vers; fi
