--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,13 @@ language: node_js
 os: osx
 osx_image: xcode7.3
 node_js:
-  - 6
-  - 4
+  - "6"
+  - "4"
+  - "0.10"
 before_install:
   - nvm use --delete-prefix $TRAVIS_NODE_VERSION
   - uname -a
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sw_vers; fi
+  - nvm ls
   - node --version
   - npm --version
